text align issue

--- a/src/App.css
+++ b/src/App.css
@@ -47,3 +47,7 @@ footer {
   padding: 2rem 4rem;
   text-align: left;
 }
+
+#root{
+  text-align: left;
+}
